--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ ul{
 body{
     margin: 0;
 }
+
 .header img{
     width: 350px;
     height: 250px;
@@ -108,4 +109,19 @@ button{
     color: #1F2937;
     font-weight: 700;
     font-size: 20px;
+}
+.action{
+    display: flex;
+    justify-content: space-around;
+    background-color: #3882F6;
+    margin: 50px 150px;
+    border-radius: 5px;
+    padding: 35px 50px;
+}
+.action button{
+    border: 2px solid white;
+}
+.action h4, .action p{
+    margin: 0;
+    color: #E5E7EB;
 }
