added footer and styled it.

--- a/styles.css
+++ b/styles.css
@@ -125,3 +125,11 @@ button{
     margin: 0;
     color: #E5E7EB;
 }
+.footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937 ;
+    color: #F9FAF8;
+    padding: 25px 50px;
+}
